<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background_fragment_gt"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@drawable/layout_style"
        android:layout_margin="10dp"
        android:textColor="@color/dialog_text_color_custom"
        android:text="@string/menu_thongke"
        style="@style/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/layout_style"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        //DatePicker left
        <LinearLayout
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                style="@style/txt_thongke"
                android:text="@string/txt_thongke_ngaydau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textColor="@color/dialog_text_color_custom"
                    android:inputType="date"
                    android:id="@+id/edtPickerDateLeft"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:hint="yyyy/MM/dd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnPickerDateLeft"
                    android:background="@drawable/btn_date_custom"
                    android:text="Chọn ngày đầu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        //===========================================//

        //DatePicker right
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAlignment="center"
                style="@style/txt_thongke"
                android:text="@string/txt_thongke_ngaycuoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textColor="@color/dialog_text_color_custom"
                    android:inputType="date"
                    android:id="@+id/edtPickerDateRight"
                    android:hint="yyyy/MM/dd"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnPickerDateRight"
                    android:background="@drawable/btn_date_custom"
                    android:text="Chọn ngày cuối"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    //=============================================//

    //Spinner and Button ThongKe
    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/layout_style"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:layout_marginRight="5dp"
            android:id="@+id/spnThongKe"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:layout_marginLeft="5dp"
            android:id="@+id/btnThongKe"
            android:text="Thống Kê"
            android:layout_weight="2"
            android:background="@drawable/btn_date_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    //==============================================//

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_style"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/txt_thongke_khoanthu"
                style="@style/txt_thongke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/dialog_text_color_custom"
                android:id="@+id/txtTongThu"
                style="@style/txtTong"
                android:hint="0.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAlignment="center"
                android:text="@string/txt_thongke_khoanchi"
                style="@style/txt_thongke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:textColor="@color/dialog_text_color_custom"
                android:id="@+id/txtTongChi"
                style="@style/txtTong"
                android:hint="0.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAlignment="center"
                android:text="@string/txt_thongke_tongthuchi"
                style="@style/txt_thongke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:textColor="@color/dialog_text_color_custom"
                android:id="@+id/txtTongThuChi"
                style="@style/txtTong"
                android:hint="0.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    //==================================================
    //ListView
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_style"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Tên Thu Chi"
                style="@style/txt_thongke"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/txt_thongke"
                android:text="Số Tiền"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/txt_thongke"
                android:text="Ngày Thu Chi"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ListView
            android:id="@+id/lvThongKe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>